2.8.19 ( 4 Dec 2001)
- removed CGAL/IO/polygonal_2.h

2.8.18  (1 Dec 2001)
- Fix warning.

2.8.17  (24 Sep 2001)
- removed a remaining esprit_logo in cgal_window.h

2.8.16  (21 Sep 2001)
- added header to cgal_logo.h 

2.8.15  (21 Sep 2001)
- moved cgal_logo to src so it will be included in the library

2.8.14  (19 Sep 2001)
- replace a remaining esprit_logo by cgal_logo

2.8.13  (19 Sep 2001)
- changed from use of esprit_logo to cgal_logo

2.8.12  (18 Sep 2001)
- changed esprit_logo.xpm to add (char*) types for strings to prevent warnings
  for SUNPRO compiler.

2.8.11  (29 Aug 2001)
- changed ccSection commands to section commands since the former don't
  work with the pdf converter

2.8.10  (19 July 2001)
- removed include of CGAL/LEDA/window.h in forward_decl_window_stream.h

2.8.9   (11 July 2001)
- removed unused parameter names in Postscript_file_stream
- got rid of node_width here too

2.8.8   (11 July 2001)
- LEDA check changed in manual_example_ps

2.8.7   (04 July 2001)
- small change in documentation

2.8.6       (27 Jun 2001)
- header file CGAL/IO/cgal_window_redefine.h added
- small change in the documentation

2.8.5       (22 Jun 2001)
- added 2 casts to cgal_window.h to avoid warnings on some
  compilers
- added short comment about CGAL::window in the manual

2.8.4       (21 Jun 2001)
- changed point output (no nodes are used any more)
- input and output operators in IO/leda_window.h and IO/cgal_window.h
  now support filled object

2.8.3       (20 Jun 2001)
- changed window_input demo for usage with CGAL::window

2.8.2       (18 June 2001)
- Update version string in leda_window to 2.3.
- Minor fixes.

2.8.1       (23 May 2001)
- changed __USE_CGAL_WINDOW__ to the better name
  CGAL_USE_CGAL_WINDOW (suggested by Sylvain)

2.8.0       (17 May 2001)
- file cgal_window added to make the package work with
  the CGAL::window - class (port of the LEDA window,
  that works without LEDA)
- small changes in Window_stream.h and forward_decl_window_stream.h